--- a/index3.html
+++ b/index3.html
@@ -35,7 +35,7 @@
         <a href="https://accounts.google.com/signin/chrome/sync?ssp=1&email_hint=sadiqfarooqomotolani%40gmail.com&continue=https%3A%2F%2Fwww.google.com%2F">
             <div class="flex-elements">
                 <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="" width="20" height="20">
-                <p>Signgin</p>
+                <p>Signin</p>
             </div>
         </a>
     </div>
