--- a/index3.html
+++ b/index3.html
@@ -1,22 +1,24 @@
-<!DOCTYPE html>g
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Homepage</title>
     <link rel="stylesheet" href="styles3.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-LDeDU/zR1KmJYaFmglB+qT4tQmqC6pTV5ck+okPVm/M/C1Yv49AJzkQG25n2L5KbhSTI0mlP6U55nc3tI65KEg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/2f3973f32f.js" crossorigin="anonymous"></script></head>
 </head>
 <body>
     <div class="google-logo"></div>
     <div class="search-bar">
             <input type="text" placeholder="Search Google...">
-            <!-- <button class="voice-search-button"><i class="fas fa-microphone"></i></button> -->
+            <button class="input-icons"><i class="fas fa-microphone"></i></button>
+            <button class="input-icons"><i class="fas fa-camera"></i></button>
+            <button class="input-icons"><i class="fas fa-search"></i></button>
     </div>
     <div class="image-div">
         <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/">
             <div class="flex-elements">
-                <img src="https://www.freecodecamp.org/icons/icon-512x512.png" alt="" width="20" height="20">
+                <img src="https://www.freecodecamp.org/icons/icon-512x512.png" alt="">
                 <p>freecodecamp</p>
             </div>
         </a>
